frontend: [Feed, Entry] fix empty message and overflow message cases

--- a/frontend/src/components/report_page/Feed/index.scss
+++ b/frontend/src/components/report_page/Feed/index.scss
@@ -21,6 +21,7 @@
       padding: 5px 10px;
       margin-bottom: 10px;
       border-radius: 8px;
+      word-wrap: break-word;
     }
   }
 }
